display the author's first name in the blog post card update the view.py function that fetches posts to include the first name

--- a/webapp/templates/blog.html
+++ b/webapp/templates/blog.html
@@ -87,6 +87,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <!-- Display the public post content -->
+                                        <p>Author: {{ post.first_name }}</p>
                                         <p>{{ post.data }}</p>
                                         <p>Posted on: {{ post.date.strftime('%Y-%m-%d %H:%M') }}</p>
 
