adding the author name on every post he made by updating view and the blog html

--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -117,7 +117,8 @@
                         <div class="col-lg-3 col-md-3 footer-info">
                             <h3>About OPENSCROLL</h3>
                             <p>Welcome to OPENSCROLL, a cutting-edge blogging platform that empowers users to express themselves freely and connect with a like-minded community. the plathform is designed to provide a seamless and privacy-focused environment
-                                for users to share their thoughts, stories, and ideas without limitations.</p>
+                                for users to share their thoughts, stories, and ideas without limitations.
+                            </p>
 
                         </div>
 
