--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<h2 class="animate__animated animate__fadeInDown">Writer session </h2>
+<h2 class="animate__animated animate__fadeInDown">Writing Space </h2>
 
 <!-- Card for the note input form -->
 <div class="card mt-lg-5">
