updating contact in the footer

--- a/webapp/templates/blog.html
+++ b/webapp/templates/blog.html
@@ -68,7 +68,7 @@
         <section class="breadcrumbs">
             <div class="container">
 
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center " style=" font-size: 100px">
                     <h2>News</h2>
                 </div>
 
@@ -226,11 +226,11 @@
                                 <strong>Phone:</strong> +212 5589 588 55<br>
                                 <strong>Email:</strong> mrfadlkamal@gmail.com<br>
                                 <div class="social-links mt-3">
-                                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                    <a href="https://twitter.com/kamalfadlll" class="twitter"><i class="bx bxl-twitter"></i></a>
+                                    <a href="https://github.com/Alexus91" class="github"><i class="bx bxl-github"></i></a>
 
-                                    <a href=" # " class="instagram "><i class="bx bxl-instagram "></i></a>
-                                    <a href="# " class="linkedin "><i class="bx bxl-linkedin "></i></a>
+                                    <a href=" https://www.facebook.com/kamal.fadl.7/ " class="instagram "><i class="bx bxl-facebook "></i></a>
+                                    <a href="https://www.linkedin.com/in/kamal-fadl-602b97191/ " class="linkedin "><i class="bx bxl-linkedin "></i></a>
                                 </div>
                             </p>
 
