--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -104,11 +104,11 @@
                                 <strong>Phone:</strong> +212 5589 588 55<br>
                                 <strong>Email:</strong> mrfadlkamal@gmail.com<br>
                                 <div class="social-links mt-3">
-                                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                    <a href="https://twitter.com/kamalfadlll" class="twitter"><i class="bx bxl-twitter"></i></a>
+                                    <a href="https://github.com/Alexus91" class="github"><i class="bx bxl-github"></i></a>
 
-                                    <a href=" # " class="instagram "><i class="bx bxl-instagram "></i></a>
-                                    <a href="# " class="linkedin "><i class="bx bxl-linkedin "></i></a>
+                                    <a href=" https://www.facebook.com/kamal.fadl.7/ " class="instagram "><i class="bx bxl-facebook "></i></a>
+                                    <a href="https://www.linkedin.com/in/kamal-fadl-602b97191/ " class="linkedin "><i class="bx bxl-linkedin "></i></a>
                                 </div>
                             </p>
 
