--- a/webapp/templates/blog.html
+++ b/webapp/templates/blog.html
@@ -36,6 +36,7 @@
     <header id="header" class="fixed-top d-flex align-items-center ">
         <div class="container d-flex justify-content-between align-items-center">
 
+
             <div class="logo">
                 <h1 class="text-light"><a href="/landing"><span>OPENSCROLL</span></a></h1>
             </div>
@@ -74,6 +75,20 @@
 
             </div>
         </section>
+        <div class="carousel-item active">
+            <section id="blog" class="blog">
+                <div class="container accordion-button">
+                    <div class="row">
+                        <div class="row-cols-md-0">
+                            <main id="main">
+                                <!-- Blog section content goes here -->
+                                {% block content %} {% endblock %}
+                            </main>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <!-- End Blog Section -->
         <div class="carousel-item active">
             <section id="blog" class="blog">
