--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -4,11 +4,12 @@
 
 
 <div class="author-info">
-    {% if user.avatar_filename %}
-    <img src="{{ url_for('static', filename='avatars/' + user.avatar_filename) }}" alt="User Avatar" class="rounded-circle avatar-sm"> {% else %}
+    {% if current_user.avatar_filename %}
+    <img src="{{ url_for('static', filename='avatars/' + current_user.avatar_filename) }}" alt="User Avatar" class="rounded-circle avatar-sm"> {% else %}
     <img src="{{ url_for('static', filename='img/default_avatar.png') }}" alt="Default Avatar" class="rounded-circle avatar-sm"> {% endif %}
     <p>{{ current_user.first_name }}</p>
 </div>
+
 <style>
     .avatar-sm {
         width: 50px;
