cleaning the code and and the readme

--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -77,14 +77,14 @@
                 <div class="carousel-container">
                     <main>
                         {% block content %}
-                        <!-- Your specific page content goes here -->
+                        <!-- specific page content -->
                         {% endblock %}
                     </main>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End Hero -->
+    <!-- End  -->
 
 
 
