--- a/webapp/templates/landingpage.html
+++ b/webapp/templates/landingpage.html
@@ -10,8 +10,8 @@
         <div class="carousel-item active">
             <div class="carousel-container">
                 <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Openscroll</span></h2>
-                <p class="animate__animated animate__fadeInUp">a cutting-edge blogging platform that empowers users to express themselves freely and connect with a like-minded community. the plathform is designed to provide a seamless and privacy-focused environment for users to share their thoughts,
-                    stories, and ideas without limitations.</p>
+                <p class="animate__animated animate__fadeInUp">Blogging platform that empowers users to express themselves freely and connect with a like-minded community. the plathform is designed to provide a seamless and privacy-focused environment for users to share their thoughts, stories, and
+                    ideas without limitations.</p>
                 <a href="/blog" class="btn-get-started animate__animated animate__fadeInUp">Go to the Blog</a>
             </div>
         </div>
