adding landing page pic

--- a/webapp/templates/blog.html
+++ b/webapp/templates/blog.html
@@ -157,7 +157,7 @@
                 </div>
             </section>
         </div>
-        <script>
+        <!--<script>
             document.addEventListener("DOMContentLoaded", function() {
                 // like function and unlike preapering the implement it in the next days
                 var likeButtons = document.querySelectorAll(".like-btn");
@@ -194,7 +194,8 @@
                     });
                 });
             });
-        </script>
+        </script> i will implement later-->
+
 
 
         <script>
